The general functionality of the Portfolio service has been completed