@@ -1,5 +1,7 @@
 package com.kiryukhin.portfolio_service.services;
 
+import com.kiryukhin.portfolio_service.clients.ExternalMarketApi;
+import com.kiryukhin.portfolio_service.clients.model.MarketApiStockResponse;
 import com.kiryukhin.portfolio_service.controllers.model.requests.TradingOperationRequest;
 import com.kiryukhin.portfolio_service.controllers.model.responses.PortfolioInfoResponse;
 import com.kiryukhin.portfolio_service.controllers.model.responses.TradingOperationResponse;
@@ -10,19 +12,23 @@ import com.kiryukhin.portfolio_service.security.services.UserService;
 import com.kiryukhin.portfolio_service.services.assetStock.IAssetStockService;
 import com.kiryukhin.portfolio_service.services.portfolio.IPortfolioServices;
 import com.kiryukhin.portfolio_service.services.stock.IStockService;
-import com.kiryukhin.portfolio_service.services.trading.ITradingOperationService;
+import com.kiryukhin.portfolio_service.services.tradingOperation.ITradingOperationService;
 import com.kiryukhin.portfolio_service.services.tradingOperationType.ITradingOperationTypeService;
-import com.kiryukhin.portfolio_service.system.exception.PortfolioNotFoundException;
-import com.kiryukhin.portfolio_service.system.exception.StockNotFoundException;
-import com.kiryukhin.portfolio_service.system.exception.TradingOperationTypeNotFoundException;
+import com.kiryukhin.portfolio_service.system.exception.notFound.PortfolioNotFoundException;
+import com.kiryukhin.portfolio_service.system.exception.notFound.StockNotFoundException;
+import com.kiryukhin.portfolio_service.system.exception.notFound.TradingOperationTypeNotFoundException;
+
+import com.kiryukhin.portfolio_service.system.exception.serviceNotResponses.ExternalServiceNotResponses;
+import com.kiryukhin.portfolio_service.system.exception.serviceNotResponses.ExternalServiceReturnNull;
+import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.security.Principal;
-import java.util.HashSet;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,63 +39,69 @@ public class OperationGeneralService implements IOperationsGeneralService {
     private final IStockService stockService;
     private final IAssetStockService assetStockService;
     private final ITradingOperationTypeService tradingOperationTypeService;
-
     private final UserService userService;
+    private final ExternalMarketApi externalMarketApi;
 
     @Override
     public ResponseEntity<?> createPortfolio(Principal principal) {
-        var user = getUserByPrincipal(principal);
+        try {
+            getPortfolioByPrincipal(principal);
+        } catch (PortfolioNotFoundException ex) {
+            String username = principal.getName();
+            User user = userService.findUser(username);
 
-        var portfolio = new PortfolioEntity();
-        portfolio.setUser(user);
-        portfolio.setAssetStocks(new HashSet<>());
+            PortfolioEntity portfolio = new PortfolioEntity();
+            portfolio.setUser(user);
+            portfolio.setAssetStocks(new HashSet<>());
 
-        return ResponseEntity.ok(portfolioServices.savePortfolio(portfolio));
+            return ResponseEntity.ok(portfolioServices.savePortfolio(portfolio));
+        }
+        return ResponseEntity.badRequest().body("Portfolio already exists.");
     }
 
     @Override
     public ResponseEntity<TradingOperationResponse.RecordTradingOperationResponse> createTradingOperation(
             TradingOperationRequest.RecordTradingOperationRequest requestBuyDto,
             Principal principal) {
-        var user = getUserByPrincipal(principal);
-        var portfolio = getPortfolioByUser(user);
-
-        var ticker = requestBuyDto.ticker();
-        var stock = findStockByTicker(ticker);
+        PortfolioEntity portfolio = getPortfolioByPrincipal(principal);
+        String ticker = requestBuyDto.ticker();
+        Stock stock = findStockByTicker(ticker);
 
         var operationType = requestBuyDto.operationType();
         var tradingOperationType = tradingOperationTypeService.findTradingOperationTypeByType(operationType)
                 .orElseThrow(() -> {
-                    final String s = String.format("Operation type '%s' not found!", operationType);
-
-                    log.debug(s);
-                    return new TradingOperationTypeNotFoundException(s);
+                    StringBuilder builder = new StringBuilder();
+                    builder.append("Operation type ").append(operationType).append(" not found!");
+                    log.debug(builder.toString());
+                    return new TradingOperationTypeNotFoundException(builder.toString());
                 });
 
-        var amount = requestBuyDto.amount();
-        var tradingOperation = tradingOperationService.executeTradingOperation(stock, amount, portfolio, tradingOperationType);
+        Double price = getPriceByTicker(ticker);
+
+        long amount = requestBuyDto.amount();
+        TradingOperation tradingOperation =
+                tradingOperationService.executeTradingOperation(stock, amount, portfolio, tradingOperationType, price);
 
         return ResponseEntity.ok(
                 new TradingOperationResponse.RecordTradingOperationResponse(
-                        tradingOperation.getId().toString(),
-                        tradingOperation.getPortfolio().toString(),
-                        tradingOperation.getStock().getTicker(),
-                        tradingOperation.getAmount().toString(),
-                        tradingOperation.getPrice().toString()
-                ));
+                tradingOperation.getId().toString(),
+                tradingOperation.getPortfolio().toString(),
+                tradingOperation.getStock().getTicker(),
+                tradingOperation.getAmount().toString(),
+                tradingOperation.getPrice().toString()
+        ));
     }
 
     @Override
     public void updateAssetStockByRequest(TradingOperationRequest.RecordTradingOperationRequest request, Principal principal) {
-        var user = getUserByPrincipal(principal);
-        var portfolio = getPortfolioByUser(user);
-        var ticker = request.ticker();
-        var stock = findStockByTicker(ticker);
+        PortfolioEntity portfolio = getPortfolioByPrincipal(principal);
+        String ticker = request.ticker();
+        Stock stock = findStockByTicker(ticker);
+        List<TradingOperation> tradingOperationList = tradingOperationService
+                .findOperationsByPortfolioIdAndStockId(portfolio.getId(), stock.getId());
 
-        var tradingOperationList = tradingOperationService.findOperationByPortfolioIdAndStockId(portfolio.getId(), stock.getId());
-        if (tradingOperationList != null && !tradingOperationList.isEmpty()) {
-
-            var assetStock = assetStockService.findByStockAndPortfolio(stock, portfolio);
+        if (!tradingOperationList.isEmpty()) {
+            AssetStock assetStock = assetStockService.findByStockAndPortfolio(stock, portfolio);
             if (assetStock == null) {
                 assetStock = new AssetStock();
                 assetStock.setPortfolio(portfolio);
@@ -97,57 +109,110 @@ public class OperationGeneralService implements IOperationsGeneralService {
             }
 
             var amount = calculateAmountStock(tradingOperationList);
-
             assetStock.setAmount(amount);
-
             assetStockService.save(assetStock);
         }
     }
 
     @Override
-    public void updateAllAssetStockByPrincipal(Principal principal) {
-        var user = getUserByPrincipal(principal);
-        var portfolio = getPortfolioByUser(user);
-        List<AssetStock> assetStocksOld = portfolio.getAssetStocks().stream().toList();
+    public ResponseEntity<?> updateAllAssetStockByPrincipal(Principal principal) {
+        var portfolio = getPortfolioByPrincipal(principal);
+        List<TradingOperation> tradingOperationList =
+                tradingOperationService.findOperationsByPortfolioId(portfolio.getId());
 
-        List<TradingOperation> tradingOperationList = tradingOperationService.findOperationByPortfolioId(portfolio.getId());
-        List<Stock> stockList = tradingOperationList.stream().map(TradingOperation::getStock).toList();
-//        stockList.stream().collect(Collectors.toList()).forEach(stock -> !assetStocks.contains());
-//
-//        List<AssetStock> assetStockList = tradingOperationList.stream();
+        if (!tradingOperationList.isEmpty()) {
+            Map<Stock, List<TradingOperation>> map = tradingOperationList.stream()
+                    .collect(Collectors.groupingBy(
+                            TradingOperation::getStock,
+                            Collectors.toList()));
+
+            List<AssetStock> assetStockList = map.entrySet()
+                    .stream()
+                    .map(entry -> new AssetStock(entry.getKey(), calculateAmountStock(entry.getValue()), portfolio)
+                    )
+                    .toList();
+
+            assetStockService.deleteAllByPortfolio(portfolio);
+            assetStockService.saveAll(assetStockList);
+            return ResponseEntity.ok("User portfolio successfully updated!");
+        }
+        return ResponseEntity.ok("User has not made any trading operations!");
+    }
+
+    @Override
+    public ResponseEntity<TradingOperationResponse.TradingOperationListResponse> getTradingOperationList(Principal principal) {
+        PortfolioEntity portfolio = getPortfolioByPrincipal(principal);
+
+        List<TradingOperation> operationList =
+                tradingOperationService.findOperationsByPortfolioId(portfolio.getId());
+        return ResponseEntity.ok(new TradingOperationResponse.TradingOperationListResponse(
+                operationList.stream().map(TradingOperation::toString).toList()));
+    }
+
+    @Override
+    public ResponseEntity<TradingOperationResponse.TradingOperationListResponse> getTradingOperationListByTicker(
+            String ticker,
+            Principal principal) {
+        PortfolioEntity portfolio = getPortfolioByPrincipal(principal);
+        Stock stock = findStockByTicker(ticker);
+
+        var operationList =
+                tradingOperationService.findOperationsByPortfolioIdAndStockId(portfolio.getId(), stock.getId());
+        return ResponseEntity.ok(new TradingOperationResponse.TradingOperationListResponse(
+                operationList.stream().map(TradingOperation::toString).toList()));
     }
 
     @Override
     public ResponseEntity<PortfolioInfoResponse.GetPortfolioInfoResponse> getPortfolioInfo(Principal principal) {
-        var user = getUserByPrincipal(principal);
-        var portfolio = getPortfolioByUser(user);
+        var portfolio = getPortfolioByPrincipal(principal);
 
         return ResponseEntity.ok(
                 new PortfolioInfoResponse.GetPortfolioInfoResponse(
                         portfolio.getUser().getUsername(),
                         portfolio.getId().toString(),
-                        List.of(portfolio.getAssetStocks().stream().toList().toString())
+                        portfolio.getAssetStocks().stream().map(AssetStock::toString).toList()
                 ));
     }
 
-    private PortfolioEntity getPortfolioByUser(User user) {
-        var portfolio = portfolioServices.getPortfolioDataByUserId(user.getId());
-        return portfolio.orElseThrow(() -> {
-            final String s = String.format("Portfolio by user %s not found.", user.getUsername());
+    private Double getPriceByTicker(String ticker) {
+        try {
+            MarketApiStockResponse notNullResponse = Optional.ofNullable(externalMarketApi.getMarket(ticker))
+                    .orElseThrow(() -> {
+                        StringBuilder builder = new StringBuilder();
+                        builder.append("Market Api by GetPrice ticker:'").append(ticker).append("' request return Null!");
+                        log.debug(builder.toString());
+                        return new ExternalServiceReturnNull(builder.toString());
+                    });
+            return notNullResponse.price();
 
-            log.debug(s);
-            return new PortfolioNotFoundException(s);
-        });
+        } catch (FeignException e) {
+            int httpStatus = e.status();
+            String responseBody = e.getMessage();
+            log.debug(responseBody);
+            throw new ExternalServiceNotResponses(httpStatus, responseBody);
+        }
     }
 
     private Stock findStockByTicker(String ticker) {
         return stockService.findStock(ticker)
                 .orElseThrow(() -> {
-                    final String s = String.format("Stock with ticker '%s' not found!", ticker);
-
-                    log.debug(s);
-                    return new StockNotFoundException(s);
+                    StringBuilder builder = new StringBuilder();
+                    builder.append("Stock with ticker ").append(ticker).append(" not found!");
+                    log.debug(builder.toString());
+                    return new StockNotFoundException(builder.toString());
                 });
+    }
+
+    private PortfolioEntity getPortfolioByPrincipal(Principal principal) {
+        var user = getUserByPrincipal(principal);
+        var portfolio = portfolioServices.getPortfolioDataByUserId(user.getId());
+
+        return portfolio.orElseThrow(() -> {
+            StringBuilder builder = new StringBuilder();
+            builder.append("Portfolio by user ").append(user.getUsername()).append(" not found!");
+            log.debug(builder.toString());
+            return new PortfolioNotFoundException(builder.toString());
+        });
     }
 
     private User getUserByPrincipal(Principal principal) {
@@ -158,16 +223,13 @@ public class OperationGeneralService implements IOperationsGeneralService {
     private Long calculateAmountStock(List<TradingOperation> tradingOperationList) {
         Long amountBuy = tradingOperationList.stream()
                 .filter(tradingOperationType ->
-                        EnumOperationType.BUY
-                                .equalsName(
-                                        tradingOperationType.getTradingOperationType().getType()))
+                        EnumOperationType.BUY.equalsName(
+                                tradingOperationType.getTradingOperationType().getType()))
                 .mapToLong(TradingOperation::getAmount).sum();
-
         Long amountSell = tradingOperationList.stream()
                 .filter(tradingOperationType ->
-                        EnumOperationType.SELL
-                                .equalsName(
-                                        tradingOperationType.getTradingOperationType().getType()))
+                        EnumOperationType.SELL.equalsName(
+                                tradingOperationType.getTradingOperationType().getType()))
                 .mapToLong(TradingOperation::getAmount).sum();
 
         return amountBuy - amountSell;
